fixed titles too long

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -336,6 +336,13 @@ input[type=range].styled-slider.slider-progress::-ms-fill-lower {
   opacity: 1;
 }
 
+@media (max-width: 768px) {
+  .video-buttonBackground {
+    opacity: 1;
+  }
+
+}
+
 .mediaPreview {
   display: none;
   width: 80vw;
@@ -492,3 +499,21 @@ input[type=range].styled-slider.slider-progress::-ms-fill-lower {
   background-color: rgb(var(--colors-background-secondary));
   box-sizing: border-box;
 }
+
+/* .titleScroll {
+  animation: scroll 7s 2s linear infinite;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  40% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+} */
